Closes #163, #164, #165, #166, #167, #168, #169, #170