@@ -15,8 +15,6 @@
  */
 package com.holonplatform.core.internal.beans;
 
-import javax.annotation.Priority;
-
 import com.holonplatform.core.Validator;
 import com.holonplatform.core.beans.BeanIntrospector;
 import com.holonplatform.core.beans.BeanIntrospector.BeanIntrospectionException;
@@ -24,9 +22,11 @@ import com.holonplatform.core.beans.BeanProperty;
 import com.holonplatform.core.beans.BeanPropertyPostProcessor;
 import com.holonplatform.core.internal.Logger;
 
+import jakarta.annotation.Priority;
+
 /**
- * A {@link BeanPropertyPostProcessor} to inspect default {@link Validator} annotation and setup the bean property
- * validators.
+ * A {@link BeanPropertyPostProcessor} to inspect default {@link Validator} annotation and setup the
+ * bean property validators.
  * <p>
  * This post processor is automatically registered in default {@link BeanIntrospector} instances.
  * </p>
@@ -43,8 +43,9 @@ public class BeanPropertyValidationPostProcessor implements BeanPropertyPostProc
 
 	/*
 	 * (non-Javadoc)
-	 * @see com.holonplatform.core.beans.BeanPropertyPostProcessor#processBeanProperty(com.holonplatform.core.beans.
-	 * BeanProperty.Builder, java.lang.Class)
+	 * @see
+	 * com.holonplatform.core.beans.BeanPropertyPostProcessor#processBeanProperty(com.holonplatform.core
+	 * .beans. BeanProperty.Builder, java.lang.Class)
 	 */
 	@Override
 	public BeanProperty.Builder<?> processBeanProperty(BeanProperty.Builder<?> property, Class<?> beanOrNestedClass) {
@@ -66,7 +67,7 @@ public class BeanPropertyValidationPostProcessor implements BeanPropertyPostProc
 			for (com.holonplatform.core.beans.Validator annotation : annotations) {
 				try {
 
-					property.withValidator(annotation.value().newInstance());
+					property.withValidator(annotation.value().getDeclaredConstructor().newInstance());
 
 					LOGGER.debug(() -> "BeanPropertyValidationPostProcessor: added validator to property [" + property
 							+ "]: [" + annotation.value().getName() + "]");
